# ccrestoration

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makeflie  README.md  pyproject.toml  vs.py
.github/workflows/: CI-test.yml  Release.yml
ccrestoration/: __init__.py
ccrestoration/arch/: __init__.py  arch_util.py  basicvsr_arch.py  basicvsrpp_arch.py  dat_arch.py  edsr_arch.py  edvr_arch.py  edvrfeatureextractor_arch.py  hat_arch.py  iconvsr_arch.py  msrswvsr_arch.py  rrdb_arch.py  scunet_arch.py  spynet_arch.py  srcnn_arch.py  srvgg_arch.py  swinir_arch.py  upcunet_arch.py
ccrestoration/auto/: __init__.py  config.py  model.py
ccrestoration/cache_models/: README.md  __init__.py
ccrestoration/config/: __init__.py  animesr_config.py  basicvsr_config.py  dat_config.py  edsr_config.py  edvr_config.py  edvr_feature_extractor_config.py  hat_config.py  iconvsr_config.py  realcugan_config.py  realesrgan_config.py  scunet_config.py  spynet_config.py  srcnn_config.py  swinir_config.py
ccrestoration/core/arch/: __init__.py  arch_util.py  rrdb_arch.py  rrdbnet_arch.py  srvgg_arch.py  upcunet_arch.py
ccrestoration/core/config/: __init__.py  base_config.py  realcugan_config.py  realesrgan_config.py
ccrestoration/core/model/: __init__.py  base_model.py  realcugan_model.py  realesrgan_model.py  sr_model.py
ccrestoration/core/sisr/arch/: __init__.py  rrdbnet_arch.py  srvgg_arch.py
ccrestoration/core/type/: __init__.py  arch.py  base_config.py  base_model.py  config.py  model.py
ccrestoration/model/: __init__.py  animesr_model.py  auxiliary_base_model.py  basicvsr_model.py  dat_model.py  edsr_model.py  edvr_feature_extractor_model.py  edvr_model.py  hat_model.py  iconvsr_model.py  realcugan_model.py  realesrgan_model.py  scunet_model.py  spynet_model.py  sr_base_model.py  sr_model.py  srcnn_model.py  swinir_model.py  tile.py  vsr_base_model.py
ccrestoration/op/dcn/: deform_conv.py
ccrestoration/op/fused_act/: fused_act.py
ccrestoration/op/upfirdn2d/: upfirdn2d.py
ccrestoration/type/: __init__.py  arch.py  base_config.py  base_model.py  config.py  model.py
ccrestoration/util/: color.py  misc.py
ccrestoration/utils/: device.py  enum.py  misc.py  register.py  registry.py  tile.py
ccrestoration/vs/: __init__.py  convert.py  sr.py  vs.py  vsr.py
example/: auto.py  register.py  sisr.py  vapoursynth.py  vsr.py
tests/: __init__.py  edvr_feature_extrator.py  test_animesr.py  test_auto_class.py  test_basicvsr.py  test_cache_models.py  test_dat.py  test_edsr.py  test_edvr.py  test_hat.py  test_iconvsr.py  test_import.py  test_realcugan.py  test_realesrgan.py  test_scunet.py  test_spynet.py  test_sr.py  test_srcnn.py  test_swinir.py  test_tile.py  test_type.py  test_util.py  util.py
